--- a/index.html
+++ b/index.html
@@ -4,9 +4,295 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap"
+      rel="stylesheet"
+    />
     <title>Table view</title>
   </head>
-  <body></body>
+
+  <body class="body">
+    <header class="header">
+      <div class="invoices">Invoices</div>
+      <div class="button-groups">
+        <button class="export">
+          <img src="./assets/vector.svg" alt="vector" />Export
+        </button>
+        <button class="new">
+          <img src="/assets/union.svg" alt="union" /> New
+        </button>
+        <button class="filter">
+          <img src="./assets/filter.svg" alt="filter" />
+        </button>
+        <button class="menu"><img src="./assets/menu.svg" alt="menu" /></button>
+      </div>
+    </header>
+    <main>
+      <div class="tables">
+        <div class="pagination">
+          <div class="per-page">
+            <p>Results per page</p>
+
+            <button>20<img src="./assets/down-arrow.svg" /></button>
+          </div>
+
+          <nav>
+            <button class="left"><img src="./assets/left-arrow.svg" /></button>
+            <p>1</p>
+            <button class="right">
+              <img src="./assets/right-arrow.svg" />
+            </button>
+          </nav>
+
+          <div class="input">
+            <p>Page</p>
+            <button>20<img src="./assets/down-arrow.svg" /></button>
+          </div>
+        </div>
+
+        <table class="table">
+          <thead>
+            <tr>
+              <td><input type="checkbox" class="indeterminate-checkbox" /></td>
+              <td>Type</td>
+              <td>Date</td>
+              <td>Customer</td>
+              <td>Location</td>
+              <td>State</td>
+              <td>Total</td>
+              <td></td>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Receipt</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Lydia Dias</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--progress">
+                  <img src="./assets/Ellipse.svg" />
+                  <p>IN PROGRESS</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Receipt</p>
+                <p>#100048</p>
+              </td>
+              <td>
+                <p>21.10.2022</p>
+                <p class="date">DUE 2 DAYS AGO</p>
+              </td>
+              <td>Livia Siphron</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--pending">
+                  <img src="./assets/pending.svg" />
+                  <p>PENDING</p>
+                </div>
+              </td>
+
+              <td>
+                <p>4147.20 €</p>
+                <p class="total">UNPAID 200.29 €</p>
+              </td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Invoice-Waybill</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Tatiana George</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--success">
+                  <img src="./assets/success.svg" />
+                  <p>SUCCESS</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" checked /></td>
+              <td>
+                <p>Invoice-Waybill</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Dulce Lipshutz</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--complete">
+                  <img src="./assets/pending.svg" />
+                  <p>COMPLETE</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Prepayment inv.</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Paityn Philips</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--progress">
+                  <img src="./assets/Ellipse.svg" />
+                  <p>IN PROGRESS</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" checked /></td>
+              <td>
+                <p>Prepayment inv.</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Jordyn Mango</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--pending">
+                  <img src="./assets/pending.svg" />
+                  <p>PENDING</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Receipt</p>
+                <p>#100048</p>
+              </td>
+              <td>
+                <p>21.10.2022</p>
+                <p class="date">DUE 2 DAYS AGO</p>
+              </td>
+              <td>Paityn Workman</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--success">
+                  <img src="./assets/success.svg" />
+                  <p>SUCCESS</p>
+                </div>
+              </td>
+
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Receipt</p>
+                <p>#100048</p>
+              </td>
+              <td>
+                <p>21.10.2022</p>
+                <p class="date">DUE 2 DAYS AGO</p>
+              </td>
+              <td>Davis Dorwart</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--complete">
+                  <img src="./assets/pending.svg" />
+                  <p>COMPLETE</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Receipt</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Craig Workman</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--complete">
+                  <img src="./assets/pending.svg" />
+                  <p>COMPLETE</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+
+            <tr>
+              <td><input type="checkbox" /></td>
+              <td>
+                <p>Receipt</p>
+                <p>#100048</p>
+              </td>
+              <td>21.10.2022</td>
+              <td>Alfredo George</td>
+              <td>Location #12</td>
+              <td>
+                <div class="state--complete">
+                  <img src="./assets/pending.svg" />
+                  <p>COMPLETE</p>
+                </div>
+              </td>
+              <td>129.00 €</td>
+              <td>
+                <button><img src="./assets/menu.svg" /></button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+  </body>
 </html>
