refactor: general styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <div class="invoices">Invoices</div>
+      <p>Invoices</p>
       <div class="button-groups">
         <button class="export">
           <img src="./assets/vector.svg" alt="vector" />Export
@@ -70,7 +70,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Receipt</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Lydia Dias</td>
@@ -78,7 +78,7 @@
               <td>
                 <div class="state--progress">
                   <img src="./assets/Ellipse.svg" />
-                  <p>IN PROGRESS</p>
+                  <p class="state">IN PROGRESS</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -91,7 +91,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Receipt</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>
                 <p>21.10.2022</p>
@@ -102,7 +102,7 @@
               <td>
                 <div class="state--pending">
                   <img src="./assets/pending.svg" />
-                  <p>PENDING</p>
+                  <p class="state">PENDING</p>
                 </div>
               </td>
 
@@ -119,7 +119,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Invoice-Waybill</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Tatiana George</td>
@@ -127,7 +127,7 @@
               <td>
                 <div class="state--success">
                   <img src="./assets/success.svg" />
-                  <p>SUCCESS</p>
+                  <p class="state">SUCCESS</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -140,7 +140,7 @@
               <td><input type="checkbox" checked /></td>
               <td>
                 <p>Invoice-Waybill</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Dulce Lipshutz</td>
@@ -148,7 +148,7 @@
               <td>
                 <div class="state--complete">
                   <img src="./assets/pending.svg" />
-                  <p>COMPLETE</p>
+                  <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -161,7 +161,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Prepayment inv.</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Paityn Philips</td>
@@ -169,7 +169,7 @@
               <td>
                 <div class="state--progress">
                   <img src="./assets/Ellipse.svg" />
-                  <p>IN PROGRESS</p>
+                  <p class="state">IN PROGRESS</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -182,7 +182,7 @@
               <td><input type="checkbox" checked /></td>
               <td>
                 <p>Prepayment inv.</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Jordyn Mango</td>
@@ -190,7 +190,7 @@
               <td>
                 <div class="state--pending">
                   <img src="./assets/pending.svg" />
-                  <p>PENDING</p>
+                  <p class="state">PENDING</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -203,7 +203,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Receipt</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>
                 <p>21.10.2022</p>
@@ -214,7 +214,7 @@
               <td>
                 <div class="state--success">
                   <img src="./assets/success.svg" />
-                  <p>SUCCESS</p>
+                  <p class="state">SUCCESS</p>
                 </div>
               </td>
 
@@ -228,7 +228,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Receipt</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>
                 <p>21.10.2022</p>
@@ -239,7 +239,7 @@
               <td>
                 <div class="state--complete">
                   <img src="./assets/pending.svg" />
-                  <p>COMPLETE</p>
+                  <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -252,7 +252,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Receipt</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Craig Workman</td>
@@ -260,7 +260,7 @@
               <td>
                 <div class="state--complete">
                   <img src="./assets/pending.svg" />
-                  <p>COMPLETE</p>
+                  <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
@@ -273,7 +273,7 @@
               <td><input type="checkbox" /></td>
               <td>
                 <p>Receipt</p>
-                <p>#100048</p>
+                <p class="receipt">#100048</p>
               </td>
               <td>21.10.2022</td>
               <td>Alfredo George</td>
@@ -281,7 +281,7 @@
               <td>
                 <div class="state--complete">
                   <img src="./assets/pending.svg" />
-                  <p>COMPLETE</p>
+                  <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
