--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="./assets/vector.svg" alt="vector" />Export
         </button>
         <button class="new">
-          <img src="/assets/union.svg" alt="union" /> New
+          <img src="./assets/union.svg" alt="union" />New
         </button>
         <button class="filter">
           <img src="./assets/filter.svg" alt="filter" />
@@ -330,7 +330,7 @@
         <section class="add-customers">
           <div class="header">
             <h1><strong> Add customers</strong></h1>
-            <img src="./assets/cancel.svg" />
+            <img alt="cancel icon" src="./assets/cancel.svg" />
           </div>
 
           <p class="content">
