fix: customers-header

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           </ul>
         </div>
         <section class="add-customers">
-          <div class="header">
+          <div class="customers-header">
             <h1><strong> Add customers</strong></h1>
             <img alt="cancel icon" src="./assets/cancel.svg" />
           </div>
