--- a/index.html
+++ b/index.html
@@ -34,20 +34,26 @@
           <div class="per-page">
             <p>Results per page</p>
 
-            <button>20<img src="./assets/down-arrow.svg" /></button>
+            <button>
+              20<img src="./assets/down-arrow.svg" alt="down arrow icon" />
+            </button>
           </div>
 
           <nav>
-            <button class="left"><img src="./assets/left-arrow.svg" /></button>
+            <button class="left">
+              <img src="./assets/left-arrow.svg" alt="left arrow icon" />
+            </button>
             <p>1</p>
             <button class="right">
-              <img src="./assets/right-arrow.svg" />
+              <img src="./assets/right-arrow.svg" alt="right arrow icon" />
             </button>
           </nav>
 
           <div class="input">
             <p>Page</p>
-            <button>20<img src="./assets/down-arrow.svg" /></button>
+            <button>
+              20<img src="./assets/down-arrow.svg" alt="down arrow icon" />
+            </button>
           </div>
         </div>
 
@@ -77,13 +83,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--progress">
-                  <img src="./assets/Ellipse.svg" />
+                  <img src="./assets/Ellipse.svg" alt="ellipse icon" />
                   <p class="state">IN PROGRESS</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -101,7 +107,7 @@
               <td>Location #12</td>
               <td>
                 <div class="state--pending">
-                  <img src="./assets/pending.svg" />
+                  <img src="./assets/pending.svg" alt="pending" />
                   <p class="state">PENDING</p>
                 </div>
               </td>
@@ -111,7 +117,7 @@
                 <p class="total">UNPAID 200.29 €</p>
               </td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -126,13 +132,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--success">
-                  <img src="./assets/success.svg" />
+                  <img src="./assets/success.svg" alt="success green icon" />
                   <p class="state">SUCCESS</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -147,13 +153,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--complete">
-                  <img src="./assets/pending.svg" />
+                  <img src="./assets/pending.svg" alt="pending" />
                   <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -168,13 +174,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--progress">
-                  <img src="./assets/Ellipse.svg" />
+                  <img src="./assets/Ellipse.svg" alt="ellipse" />
                   <p class="state">IN PROGRESS</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -189,13 +195,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--pending">
-                  <img src="./assets/pending.svg" />
+                  <img src="./assets/pending.svg" alt="pending" />
                   <p class="state">PENDING</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -213,14 +219,14 @@
               <td>Location #12</td>
               <td>
                 <div class="state--success">
-                  <img src="./assets/success.svg" />
+                  <img src="./assets/success.svg" alt="success " />
                   <p class="state">SUCCESS</p>
                 </div>
               </td>
 
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -238,13 +244,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--complete">
-                  <img src="./assets/pending.svg" />
+                  <img src="./assets/pending.svg" alt="pending" />
                   <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -259,13 +265,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--complete">
-                  <img src="./assets/pending.svg" />
+                  <img src="./assets/pending.svg" alt="pending" />
                   <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
 
@@ -280,13 +286,13 @@
               <td>Location #12</td>
               <td>
                 <div class="state--complete">
-                  <img src="./assets/pending.svg" />
+                  <img src="./assets/pending.svg" alt="pending" />
                   <p class="state">COMPLETE</p>
                 </div>
               </td>
               <td>129.00 €</td>
               <td>
-                <button><img src="./assets/menu.svg" /></button>
+                <button><img src="./assets/menu.svg" alt="menu icon" /></button>
               </td>
             </tr>
           </tbody>
@@ -296,7 +302,9 @@
       <aside>
         <div class="title">
           <p>Customers</p>
-          <button class="add"><img src="./assets/add.svg" /> Add</button>
+          <button class="add">
+            <img src="./assets/add.svg" alt="add icon" /> Add
+          </button>
         </div>
 
         <div class="alphabet">
@@ -304,7 +312,9 @@
         </div>
 
         <div class="search-field">
-          <div class="search-icon"><img src="./assets/search.svg" /></div>
+          <div class="search-icon">
+            <img src="./assets/search.svg" alt="search icon" />
+          </div>
           <input id="search" type="search" />
           <button>Search</button>
         </div>
@@ -330,7 +340,7 @@
         <section class="add-customers">
           <div class="customers-header">
             <h1><strong> Add customers</strong></h1>
-            <img alt="cancel icon" src="./assets/cancel.svg" />
+            <img src="./assets/cancel.svg" alt="cancel icon" />
           </div>
 
           <p class="content">
@@ -339,7 +349,9 @@
           </p>
 
           <div class="import">
-            <button><img src="./assets/import.svg" />Import customers</button>
+            <button>
+              <img src="./assets/import.svg" alt="import" />Import customers
+            </button>
           </div>
         </section>
       </aside>
